Fix header wrapping.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -10,7 +10,7 @@ nav ul {
     margin: 0px;
 }
 
-.navigation h1 {
+.header h1 {
     white-space: nowrap;
     display: inline;
 }
